--- a/HelloToast/app/src/main/res/layout/activity_main.xml
+++ b/HelloToast/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:background="@color/colorPrimary"
-        android:text="Button"
+        android:onClick="showToast"
+        android:text="@string/toast_button_label"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,7 +37,8 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:background="@color/colorPrimary"
-        android:text="Count"
+        android:onClick="countUp"
+        android:text="@string/count_button_label"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -54,7 +56,7 @@
         android:layout_marginBottom="8dp"
         android:background="@android:color/holo_orange_light"
         android:gravity="center_vertical|center"
-        android:text="TextView"
+        android:text="@string/current_count_textview"
         android:textColor="@color/colorPrimary"
         android:textSize="160sp"
         android:textStyle="bold"
